--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -28,7 +28,11 @@
     </compilation>
 
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+      <forms loginUrl="~/Account/LogOn" timeout="2880">
+        <credentials passwordFormat="Clear">
+          <user name="admin" password="secret" />
+        </credentials>
+      </forms> 
     </authentication>
 
     <pages>
